--- a/CrosswordGame.module.css
+++ b/CrosswordGame.module.css
@@ -120,13 +120,14 @@
 
 .grid {
   border-collapse: collapse;
-  background: #111;
+  background: transparent;
 }
+
 
 /* square cells, correct size */
 .cell {
-  width: 32px;
-  height: 32px;
+  width: 38px;
+  height: 35px;
   border: 1.5px solid #111;
   background: #111;
   box-sizing: border-box;
@@ -134,11 +135,14 @@
 }
 
 .blank {
-  background: #111;
+  background: transparent;
+  border: 2px solid black;
 }
+
 
 .playableCell {
   background: #fff;
+  border: 3px solid #222;
 }
 
 .cellContent {
@@ -152,7 +156,7 @@
   position: absolute;
   top: 2px;
   left: 3px;
-  font-size: 9px;
+  font-size: 7px;
   font-weight: bold;
   color: #222;
   z-index: 2;
@@ -164,7 +168,7 @@
   border: none;
   outline: none;
   text-align: center;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: bold;
   line-height: 32px;
   background: transparent;
